[package]
name = "SupraOracles_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
